# garmin

./: .gitignore  CLAUDE.md  pyproject.toml
app/: config.py  database.py  garmin_sync.py  main.py  models.py  schemas.py
app/routers/: journal.py  metrics.py  sync.py
scripts/: backfill.py
static/: app.js  index.html  style.css
