[project]
name = "garmin-health-dashboard"
version = "0.1.0"
description = "Local Garmin health data dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "garminconnect>=0.2",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
serve = "uvicorn app.main:app --reload"
